test/tasty/pos/src-2/tastytest/TestDelayedInternal.scala
package tastytest

object TestDelayedInternal {
  def test: DelayedInternal[Nothing] = ??? // error
}
